@@ -1,3 +1,6 @@
+* Tue Dec 14 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Patch from Daniel Kouril <kouril@ics.muni.cz> to allow
+  switching Globus vs system OpenSSL libraries/headers.
 * Mon Nov 15 2004 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Back out of (most of) redone VOMS support for committing
   to JRA1 CVS.
